RESOLVED FIXED203256
Layout Test imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-iceConnectionState.https.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=203256
Summary Layout Test imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-iceConne...
Russell Epstein
Reported 2019-10-22 10:48:31 PDT
The following layout test is a flaky failure on iOS13 and Catalina: imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-iceConnectionState.https.html The flakiness recently started on iOS around ~r251269 and on Mac around ~r251179. Steps to Reproduce: run-webkit-tests --ios-simulator --no-retry --no-sample-on-timeout -f --exit-after-n-failures 1 imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-iceConnectionState.https.html --iter 1000 Test History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2FRTCPeerConnection-iceConnectionState.https.html Diff: --- /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-iceConnectionState.https-expected.txt +++ /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-iceConnectionState.https-actual.txt @@ -1,3 +1,7 @@ +CONSOLE MESSAGE: Unhandled Promise Rejection: InvalidStateError: The object is in an invalid state. +CONSOLE MESSAGE: Unhandled Promise Rejection: InvalidStateError: The object is in an invalid state. + +Harness Error (FAIL), message = The object is in an invalid state. PASS Initial iceConnectionState should be new PASS Closing the connection should set iceConnectionState to closed
Attachments
Patch (9.04 KB, patch)
2021-09-29 02:23 PDT, youenn fablet
no flags
Patch for landing (10.33 KB, patch)
2021-09-30 03:21 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-22 10:49:14 PDT
Russell Epstein
Comment 2 2019-10-22 11:11:08 PDT
High Sierra Debug has also shown some flakiness. Mac failures are limited to debug. Updated TestExpectations for iOS and Mac in r251441.
youenn fablet
Comment 3 2021-09-29 02:23:49 PDT
youenn fablet
Comment 4 2021-09-30 03:18:40 PDT
iOS-wk2 test is due to webrtc/connection-state.html which is already flaky and is in fact probably too strict with regards to the ice connection state incrementing by 1 always.
youenn fablet
Comment 5 2021-09-30 03:21:37 PDT
Created attachment 439719 [details] Patch for landing
EWS
Comment 6 2021-09-30 04:20:57 PDT
Committed r283307 (242332@main): <https://commits.webkit.org/242332@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439719 [details].
Note You need to log in before you can comment on or make changes to this bug.